Fix a double border and redundant styling in the commits list.
The commits list was transformed to inherit from a tabular data
component, and this resulted in some duplicate borders and some styling
that was no longer needed.

This change removes the extra border and that styling, letting the
tabular data styling do the heavy lifting.

Testing Done:
Verified that the commits list no longer had a redundant border, and
displayed correctly.

Reviewed at https://reviews.reviewboard.org/r/13309/

--- a/reviewboard/static/rb/css/pages/review-request.less
+++ b/reviewboard/static/rb/css/pages/review-request.less
@@ -299,12 +299,7 @@
 }
 
 .commit-list {
-  background-color: @review-request-commit-list-bg;
-  border: @review-request-field-border;
-  border-collapse: collapse;
   margin: @textarea-editor-margin;
-  display: table !important;
-  width: 100%;
 
   &.changed {
     .marker {
